--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="style.css">
@@ -7,12 +8,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Workshop</title>
 </head>
+
 <body>
     <div>
-        <h1>novo titulo</h1>
-        <p1>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque facilis dolorem aliquid quia ea deleniti ipsam possimus rem necessitatibus. Fugit libero eius non fuga sit repellat aliquid, qui id facilis! Aliquid mollitia repellat in dicta et laborum dolores nobis quidem officia, porro ratione animi tempora, harum maiores repudiandae, exercitationem vel.
-        </p1>
+        <h1>Novo Titulo</h1>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Similique ad necessitatibus voluptas, ut dolor
+            deleniti nihil qui soluta pariatur culpa accusamus est fugiat totam tenetur, repudiandae accusantium
+            expedita. Veniam, maxime?</p>
     </div>
 </body>
+
 </html>
